@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.3"
-#define public MagickPackageVersionAddendum ".020080908"
+#define public MagickPackageVersionAddendum ".020080909"
 #define public MagickPackageReleaseDate "unreleased"
