@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2008-09-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> www/perl.html: Fix formatting of examples.  Should address
+        SourceForge issue [ 2100339 ] "Wrong format in example script on
+        web page".
+
+</UL>
+<p>
 2008-09-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
